# readlines

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.direnv/: flake-profile-1-link
newsapi/: Cargo.toml
newsapi/src/: lib.rs
readlines/: Cargo.toml
readlines/src/: main.rs  readlines.rs
