[package]
name = "newsapi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.6.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
url = "2.3.1"
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
async = [
  "reqwest"
]
