[package]
name = "readlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.0"
eframe = "0.14.0"
newsapi = {version = "0.2.0", path = "../newsapi"}
serde = { version = "1.0.160", features = ["derive"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
